add section and text

--- a/index.html
+++ b/index.html
@@ -14,37 +14,33 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
-<!--HEADER-->
-<header class="header">
-    <div class="container">
-        <div class="nav-left">
-            <img src="./img/logo-small.png" alt="logo" class="logo-header">
-
-            <ul class="link">
-                <li class="nav-link"><a href="#">Perchè Dropbox</a></li>
-                <li class="nav-link"><a href="#">Funzioni</a></li>
-                <li class="nav-link"><a href="#">Piani e Prezzi</a></li>
-            </ul>
-        </div>
-
-        <div class="nav-right">
-            <ul class="link">
-                <li class="nav-link"><a href="#">Supporto</a></li>
-                <li class="nav-link"><a href="#">Contatta l'ufficio vendite</a></li>
-                <li class="nav-link"><a href="#">Accedi</a></li>
-                <li class="nav-link"><button class="btn accedi">Accedi</button></li>
-            </ul>
-
-        </div>
-
-    </div>
-
-
-</header>
 
 <body>
+    <!--HEADER-->
+    <header class="header">
+        <div class="container">
+            <!--NAV HEADER-->
+            <nav class="nav-left">
+                <img src="./img/logo-small.png" alt="logo" class="logo-header">
+
+                <ul class="link">
+                    <li class="nav-link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="nav-link"><a href="#">Funzioni</a></li>
+                    <li class="nav-link"><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </nav>
+            <nav class="nav-right">
+                <ul class="link">
+                    <li class="nav-link"><a href="#">Supporto</a></li>
+                    <li class="nav-link"><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li class="nav-link"><a href="#">Accedi</a></li>
+                    <li class="nav-link"><button class="btn accedi">Accedi</button></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
-        <!--hero section-->
+        <!--HERO SECTION-->
         <section class="hero-section">
             <div class="container">
 
@@ -60,28 +56,22 @@
                                 possimus facilis, quis, commodi iste iusto ut?</p>
                             <button class="btn hero">Inizia la tua prova gratuita</button>
                             <p class="hero text">Annulla in qualsiasi momento.</p>
+                            <i class="fa-solid fa-arrow-down fa-2xl arrow"></i>
                         </div>
                         <div class="hero-img">
                             <img src="./img/jumbo.png" alt="jumbo">
                         </div>
-
                     </div>
-
-
                 </div>
-
-
             </div>
         </section>
-        <!--first section-->
+        <!--BUSINESS PLAN SECTION-->
         <section class="business-plane">
             <div class="container">
                 <h2 class="title">Trova il piano business che fa per te.</h2>
                 <input type="radio" value="Fatturazione mensile" name="fatturazione" class="input">Fatturazione mensile
                 <input type="radio" value="Fatturazione annuale" name="fatturazione" class="input">Fatturazione annuale
-
                 <div class="plane">
-
                     <div class="card-container">
                         <div class="card-header">
                             <h4>Singolo</h4>
@@ -92,8 +82,8 @@
                             <p class="duration">/mese</p>
                             <ul>
                                 <li class="card-items">1 Utente</li>
-                                <li class="card-items">5 TB di spazio di archiviazione</li>
-                                <li class="card-items">funzioni di produttività premium e condivisione file semplice e
+                                <li class="card-items">5 TB di spazio di archiviazione sicuro</li>
+                                <li class="card-items">Funzioni di produttività premium e condivisione file semplice e
                                     sicura </li>
                             </ul>
                             <button class="btn card">Prova gratis per 30 giorni</button>
@@ -140,6 +130,7 @@
                         <div class="card-body">
                             <h3 class="title-card">Enterprise</h3>
                             <p class="contattaci">Contattaci</p>
+                            <p>-</p>
 
                             <ul>
                                 <li class="card-items">10 o più utenti</li>
@@ -160,7 +151,7 @@
                     </div>
                 </div>
         </section>
-        <!-- second section-->
+        <!-- TEAM SECTION-->
         <section class="team">
             <div class="container">
                 <h4 class="team-header">team</h4>
@@ -177,7 +168,7 @@
                 </div>
             </div>
         </section>
-        <!-- third section-->
+        <!-- PARTNER SECTION-->
         <section class="partner">
             <div class="container">
                 <div class="partner-container">
@@ -194,9 +185,8 @@
 
             </div>
         </section>
-        <!--fourth section-->
+        <!--OFFERT SECTION-->
         <section class="option">
-
             <div class="container">
                 <div class="option-title">
                     <h1>Esegui più operazioni con DropBox Business</h1>
@@ -259,24 +249,36 @@
                 </div>
             </div>
         </section>
+        <!--PASS-->
         <section class="pass">
             <div class="container">
                 <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
                 <a href="#">scopri di più sui nostri clienti</a>
             </div>
         </section>
-        <section class="bunner">
+
+        <!--BRAND SECTION-->
+        <section class="brand">
             <div class="container">
-                <div class="first-row">
-                    <div class="column-left">
-                        kkk
-                        <div class="grid"></div>
-                        <div class="grid"></div>
-                        <div class="grid"></div>
-                        <div class="grid"></div>
+                <div class="row">
+                    <div class="column-left ">
+                        <div class="brand-square"><img src="./img/designit.svg" alt="designit"></div>
+                        <div class="brand-square"><img src="./img/arizona_state_university.svg" alt=""></div>
+                        <div class="brand-square"><img src="./img/university_of_florida.svg" alt="florida"></div>
+                        <div class="brand-square"><img src="./img/topps.svg" alt="topps"></div>
                     </div>
-                    <div class="column-center">ssss</div>
-                    <div class="column-right">sssss</div>
+                    <div class="column-center "><img src="./img/designit.svg" alt="designit">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur sunt ex vel est
+                            deserunt iste nobis a perspiciatis rem, esse quos harum facilis corporis, ipsam libero nulla
+                            maxime. Exercitationem, aperiam.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="column-right ">
+                        <div class="brand-square"><img src="./img/world_bicycle_relief.svg" alt=""></div>
+                        <div class="brand-square"><img src="./img/hearst_corp.svg" alt="hearts"></div>
+                        <div class="brand-square"><img src="./img/lonely_planet.svg" alt="lonely planet"></div>
+                        <div class="brand-square"><img src="./img/clear_channel.svg" alt="clear channel"></div>
+                    </div>
                 </div>
             </div>
             <section class="Prove">
@@ -285,7 +287,8 @@
                         <div class="indication">
                             <h2>Porta DropBox Business <br> nella tua azienda</h2>
                         </div>
-                        <div class="button-prove"> <button class="btn prove">Fai ora la tua prova Gratuita </button></div>
+                        <div class="button-prove"> <button class="btn prove">Fai ora la tua prova Gratuita </button>
+                        </div>
 
                     </div>
 
@@ -306,89 +309,99 @@
     </main>
     <footer class="footer">
 
-        <section class="page-sectionsection-footer">
-            <div class="container">
-                <!--nav footer-->
-                <div class="footer-column">
 
-                    <nav class="nav-footer">
-                        <ul class="link-list">
-                            <li class="footer-items-title">
+        <div class="container">
+            <!--nav footer-->
+            <div class="footer-column">
+
+                <nav class="nav-footer">
+                    <ul class="link-list">
+                        <li class="footer-items title">
+                            <a href="#">
                                 <h3>Dropbox</h3>
-                            </li>
+                            </a>
+                        </li>
 
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-footer">
-                        <ul class="">
-                            <li class="footer-items-title">
+                        <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                        <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                        <li class="footer-items"><a href="#">Piani</a></li>
+                        <li class="footer-items"><a href="#">Sicurezza</a></li>
+                        <li class="footer-items"><a href="#">Funzioni</a></li>
+                    </ul>
+                </nav>
+                <nav class="nav-footer">
+                    <ul class="">
+                        <li class="footer-items title">
+                            <a href="#">
                                 <h3>Prodotti</h3>
-                            </li>
+                            </a>
+                        </li>
 
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
+                        <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                        <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                        <li class="footer-items"><a href="#">Piani</a></li>
+                        <li class="footer-items"><a href="#">Sicurezza</a></li>
+                        <li class="footer-items"><a href="#">Funzioni</a></li>
 
-                        </ul>
-                    </nav>
-                    <nav class="nav-footer">
-                        <ul class="">
+                    </ul>
+                </nav>
+                <nav class="nav-footer">
+                    <ul class="">
 
-                            <li class="footer-items-title">
+                        <li class="footer-items title">
+                            <a href="#">
                                 <h3>Azienda</h3>
-                            </li>
+                            </a>
+                        </li>
 
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-footer">
-                        <ul class="">
+                        <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                        <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                        <li class="footer-items"><a href="#">Piani</a></li>
+                        <li class="footer-items"><a href="#">Sicurezza</a></li>
+                        <li class="footer-items"><a href="#">Funzioni</a></li>
+                    </ul>
+                </nav>
+                <nav class="nav-footer">
+                    <ul class="">
 
-                            <li class="footer-items-title">
+                        <li class="footer-items title">
+                            <a href="#">
                                 <h3>Supporto</h3>
-                            </li>
+                            </a>
+                        </li>
 
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-footer">
-                        <ul class="">
+                        <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                        <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                        <li class="footer-items"><a href="#">Piani</a></li>
+                        <li class="footer-items"><a href="#">Sicurezza</a></li>
+                        <li class="footer-items"><a href="#">Funzioni</a></li>
+                    </ul>
+                </nav>
+                <nav class="nav-footer">
+                    <ul class="">
 
-                            <li class="footer-items-title">
+                        <li class="footer-items title">
+                            <a href="">
                                 <h3>Community</h3>
-                            </li>
+                            </a>
+                        </li>
 
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="language"></div>
-
-
+                        <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                        <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                        <li class="footer-items"><a href="#">Piani</a></li>
+                        <li class="footer-items"><a href="#">Sicurezza</a></li>
+                        <li class="footer-items"><a href="#">Funzioni</a></li>
+                    </ul>
+                </nav>
             </div>
-            </div>
+            <div class="language"></div>
 
 
-        </section>
+        </div>
+        </div>
+
+
+
 
 
 
