--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="plane">
                     <div class="card-container">
                         <div class="card-header">
-                            <h4>Singolo</h4>
+                            <h4><i class="fa-regular fa-user"></i>Singolo</h4>
                         </div>
                         <div class="card-body">
                             <h3 class="title-card">Professional</h3>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-header">
-                            <h4>Team</h4>
+                            <h4><i class="fa-solid fa-users"></i>Team</h4>
                         </div>
                         <div class="card-body">
                             <h3 class="title-card">Advanced</h3>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="card-container">
                         <div class="card-header">
-                            <h4>Azienda</h4>
+                            <h4><i class="fa-regular fa-building"></i>Azienda</h4>
                         </div>
                         <div class="card-body">
                             <h3 class="title-card">Enterprise</h3>
@@ -154,7 +154,7 @@
         <!-- TEAM SECTION-->
         <section class="team">
             <div class="container">
-                <h4 class="team-header">team</h4>
+                <h4 class="team-header"><i class="fa-regular fa-building"></i>team</h4>
                 <div class="team-body">
                     <div class="column-l">
                         <h3>Enterprice</h3>
@@ -300,9 +300,9 @@
         <section class="ask">
             <div class="container">
                 <h2 class="ask-title">Domande frequenti</h2>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
             </div>
 
         </section>
