--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
             <div class="container">
                 <div class="row">
                     <div class="column-left ">
-                        <div class="brand-square"><img src="./img/designit.svg" alt="designit"></div>
-                        <div class="brand-square"><img src="./img/arizona_state_university.svg" alt=""></div>
-                        <div class="brand-square"><img src="./img/university_of_florida.svg" alt="florida"></div>
-                        <div class="brand-square"><img src="./img/topps.svg" alt="topps"></div>
+                        <div class="brand-square green"><img src="./img/designit.svg" alt="designit"></div>
+                        <div class="brand-square borgundi"><img src="./img/arizona_state_university.svg" alt=""></div>
+                        <div class="brand-square blu"><img src="./img/university_of_florida.svg" alt="florida"></div>
+                        <div class="brand-square red"><img src="./img/topps.svg" alt="topps"></div>
                     </div>
                     <div class="column-center "><img src="./img/designit.svg" alt="designit">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur sunt ex vel est
@@ -274,10 +274,10 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="column-right ">
-                        <div class="brand-square"><img src="./img/world_bicycle_relief.svg" alt=""></div>
-                        <div class="brand-square"><img src="./img/hearst_corp.svg" alt="hearts"></div>
-                        <div class="brand-square"><img src="./img/lonely_planet.svg" alt="lonely planet"></div>
-                        <div class="brand-square"><img src="./img/clear_channel.svg" alt="clear channel"></div>
+                        <div class="brand-square red"><img src="./img/world_bicycle_relief.svg" alt=""></div>
+                        <div class="brand-square light-blu"><img src="./img/hearst_corp.svg" alt="hearts"></div>
+                        <div class="brand-square deep-blu"><img src="./img/lonely_planet.svg" alt="lonely planet"></div>
+                        <div class="brand-square yellow"><img src="./img/clear_channel.svg" alt="clear channel"></div>
                     </div>
                 </div>
             </div>
