--- a/index.html
+++ b/index.html
@@ -262,16 +262,17 @@
             <div class="container">
                 <div class="row">
                     <div class="column-left ">
-                        <div class="brand-square green"><img src="./img/designit.svg" alt="designit"></div>
+                        <div class="brand-square green"><img src="./img/designit-white.svg" alt="designit"></div>
                         <div class="brand-square borgundi"><img src="./img/arizona_state_university.svg" alt=""></div>
                         <div class="brand-square blu"><img src="./img/university_of_florida.svg" alt="florida"></div>
                         <div class="brand-square red"><img src="./img/topps.svg" alt="topps"></div>
                     </div>
                     <div class="column-center "><img src="./img/designit.svg" alt="designit">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur sunt ex vel est
-                            deserunt iste nobis a perspiciatis rem, esse quos harum facilis corporis, ipsam libero nulla
-                            maxime. Exercitationem, aperiam.</p>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora
+                            molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox
+                            Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile qunato
+                            Dropbox Paper.</p>
+                            <p>morten thomas, global It lead</p>
                     </div>
                     <div class="column-right ">
                         <div class="brand-square red"><img src="./img/world_bicycle_relief.svg" alt=""></div>
@@ -300,9 +301,12 @@
         <section class="ask">
             <div class="container">
                 <h2 class="ask-title">Domande frequenti</h2>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
+                        class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
+                        class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
+                        class="fa-solid fa-chevron-down chevron"></i></div>
             </div>
 
         </section>
