--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox
                             Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile qunato
                             Dropbox Paper.</p>
-                            <p>morten thomas, global It lead</p>
+                        <p>morten thomas, global It lead</p>
                     </div>
                     <div class="column-right ">
                         <div class="brand-square red"><img src="./img/world_bicycle_relief.svg" alt=""></div>
@@ -301,12 +301,15 @@
         <section class="ask">
             <div class="container">
                 <h2 class="ask-title">Domande frequenti</h2>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
-                        class="fa-solid fa-chevron-down chevron"></i></div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
-                        class="fa-solid fa-chevron-down chevron"></i></div>
-                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced? <i
-                        class="fa-solid fa-chevron-down chevron"></i></div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?
+                    <div class="chevron"><i class="fa-solid fa-chevron-down chevron"></i></div>
+                </div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?
+                    <div class="chevron"><i class="fa-solid fa-chevron-down chevron"></i></div>
+                </div>
+                <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?
+                    <div class="chevron"><i class="fa-solid fa-chevron-down chevron"></i></div>
+                </div>
             </div>
 
         </section>
@@ -398,7 +401,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="language"></div>
+            <div class="language"><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-down"></i> </div>
 
 
         </div>
