--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
                         <div class="brand-square blu"><img src="./img/university_of_florida.svg" alt="florida"></div>
                         <div class="brand-square red"><img src="./img/topps.svg" alt="topps"></div>
                     </div>
-                    <div class="column-center "><img src="./img/designit.svg" alt="designit">
+                    <div class="column-center ">
+                        <img src="./img/designit.svg" alt="designit">
                         <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora
                             molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox
                             Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile qunato
