correction svg img

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <div class="column-left ">
                         <div class="brand-square green"><img src="./img/designit-white.svg" alt="designit"></div>
                         <div class="brand-square borgundi"><img src="./img/arizona_state_university.svg" alt=""></div>
-                        <div class="brand-square blu"><img src="./img/university_of_florida.svg" alt="florida"></div>
+                        <div class="brand-square blu"><img class="invert" src="./img/university_of_florida.svg" alt="florida"></div>
                         <div class="brand-square red"><img src="./img/topps.svg" alt="topps"></div>
                     </div>
                     <div class="column-center ">
@@ -276,7 +276,7 @@
                         <p>morten thomas, global It lead</p>
                     </div>
                     <div class="column-right ">
-                        <div class="brand-square red"><img src="./img/world_bicycle_relief.svg" alt=""></div>
+                        <div class="brand-square red"><img class="invert" src="./img/world_bicycle_relief.svg" alt=""></div>
                         <div class="brand-square light-blu"><img src="./img/hearst_corp.svg" alt="hearts"></div>
                         <div class="brand-square deep-blu"><img src="./img/lonely_planet.svg" alt="lonely planet"></div>
                         <div class="brand-square yellow"><img src="./img/clear_channel.svg" alt="clear channel"></div>
